# Frame-generation-

./: .gitignore  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: build.yml
app/: build.gradle.kts  proguard-rules.pro
app/src/main/: AndroidManifest.xml
app/src/main/assets/: VkLayer_framegen.json
app/src/main/cpp/: CMakeLists.txt  framegen_jni.cpp  framegen_types.h
app/src/main/cpp/interpolation/: motion_estimator.cpp  motion_estimator.h  optical_flow.cpp  optical_flow.h  rife_engine.cpp  rife_engine.h
app/src/main/cpp/pipeline/: frame_presenter.cpp  frame_presenter.h  frame_queue.cpp  frame_queue.h  timing_controller.cpp  timing_controller.h
app/src/main/cpp/shaders/: block_match.comp  downsample.comp  flow_consistency.comp  flow_refine.comp  frame_blend.comp  frame_warp.comp  optical_flow.comp  rgb_to_gray.comp
app/src/main/cpp/utils/: gpu_buffer.cpp  gpu_buffer.h  perf_monitor.cpp  perf_monitor.h  shader_compiler.cpp  shader_compiler.h
app/src/main/cpp/vulkan/: vulkan_capture.cpp  vulkan_capture.h  vulkan_compute.cpp  vulkan_compute.h  vulkan_layer.cpp  vulkan_layer.h
app/src/main/java/com/framegen/app/: MainActivity.kt
app/src/main/java/com/framegen/app/engine/: FrameGenEngine.kt  GameLauncher.kt  RefreshRateController.kt
app/src/main/java/com/framegen/app/overlay/: FpsOverlayService.kt  FpsOverlayView.kt
app/src/main/java/com/framegen/app/service/: BootReceiver.kt  FrameGenService.kt  FrameGenTileService.kt  GameDetectorService.kt
app/src/main/java/com/framegen/app/util/: ShizukuShell.kt
app/src/main/res/drawable/: badge_active.xml  badge_inactive.xml  bg_gradient.xml  btn_disable.xml  btn_enable.xml  btn_outline.xml  btn_primary.xml  btn_secondary.xml  btn_start.xml  btn_stop.xml  btn_warning.xml  card_bg.xml  card_bg_accent.xml  card_dark.xml  divider_gradient.xml  dot_active.xml  dot_inactive.xml  ic_launcher_foreground.xml  spinner_bg.xml  stats_bg.xml  switch_thumb.xml  switch_track.xml
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml  themes.xml
app/src/main/res/xml/: game_detector_config.xml
